<resources>
    <string name="app_name">OkTravelApplictaion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="verifypassword">Verify password</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="Title">title</string>
    <string name="Save">save</string>
    <string name="Delete">delete</string>
    <string name="description">description</string>
    <string name="Continue">Continue</string>
    <string name="Cancel">Cancel</string>
    <string name="facebook_app_id">525087672362082</string>
    <string name="fb_login_protocol_scheme">fb525087672362082</string>
    <string name="facebook_client_token">094125635330254c60bdf6b447bb886d</string>
</resources>